# jwks-service-app

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-question.md
.github/workflows/: audit.yml  docker.yml  lint.yml  release.yml  tests.yml
deployments/dev/: Dockerfile  docker-compose.yml
deployments/prod/: Dockerfile  README.md
migrations/: down.sql  up.sql
migrations/2025-02-04-204919_create_jwks/: up.sql
migrations/2025-02-05-155701_add_deleted_at_to_jwks/: down.sql  up.sql
migrations/2025-02-05-200221_add_created_at_to_jwks/: down.sql  up.sql
migrations/2025-02-05-201625_add_expiration_to_jwks/: down.sql  up.sql
migrations/2025-02-20-232229_rename_private_key/: down.sql  up.sql
migrations/2025-02-20-232359_add_x5_fields_to_jwks/: down.sql  up.sql
migrations/2025-02-21-133419_change_n_n_e_fields_in_jwks/: down.sql  up.sql
migrations/2025-02-21-133436_add_crv_n_x_fields_to_jwks/: down.sql  up.sql
migrations/2025-02-21-191921_add_y_field_to_jwks/: down.sql  up.sql
src/: crypto.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: integration_tests.rs
