[package]
name = "jwks-service-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
diesel = { version = "2.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
openssl = "0.10"
base64 = "0.22"
utoipa = { version = "3.0", features = ["actix_extras"] }
actix-cors = "0.7"
chrono = { version = "0.4", features = ["serde"] }