[package]
name = "jwks-service-app"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
diesel = { version = "2.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
openssl = "0.10"
base64 = "0.22"
utoipa = { version = "3.0", features = ["actix_extras"] }
actix-cors = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.0"  # Для асинхронного тестирования
reqwest = "0.11"  # Для HTTP-запросов в тестах
serde_json = "1.0"  # Для работы с JSON в тестах
uuid = { version = "1.0", features = ["v4"] }  # Для генерации UUID в тестах