[package]
name = "jwks-service-app"
version = "1.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
diesel = { version = "2.2.7", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
openssl = { version = "0.10.70" }
base64 = "0.22"
utoipa = { version = "3.5.0", features = ["actix_extras"] }
actix-cors = "0.7"
chrono = { version = "0.4.39", features = ["serde"] }
sha1 = "0.10.6"

[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.12"
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4"] }